syntax = "proto3";

package partyaffairs.api.partyaffairs.v1;
option go_package = "./v1;v1";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "api/partyaffairs/partyaffairs_news.proto";
import "api/partyaffairs/partyaffairs_resource.proto";
import "api/partyaffairs/partyaffairs_banner.proto";
import "api/partyaffairs/partyaffairs_task.proto";
import "api/partyaffairs/partyaffairs_task_value.proto";
import "api/partyaffairs/partyaffairs_notice.proto";
import "api/partyaffairs/partyaffairs_video.proto";

service PartyAffairs {
  rpc PageNoticeUser (PageNoticeUserRequest) returns (PageNoticeUserReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/notice/users",
    };
  }

  rpc PageNotice (PageNoticeRequest) returns (PageNoticeReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/notices",
      additional_bindings {
        get: "/partyaffairs/client/v1/notices"
      },
    };
  }

  rpc GetNotice (GetNoticeRequest) returns (Notice) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/notice",
      additional_bindings {
        get: "/partyaffairs/client/v1/notice"
      },
    };
  }

  rpc ReadNotice (ReadNoticeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      get: "/partyaffairs/client/v1/notice/read",
    };
  }

  rpc AddNotice (AddNoticeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/notice",
      body: "*"
    };
  }

  rpc UpdateNotice (UpdateNoticeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/notice",
      body: "*"
    };
  }

  rpc DeleteNotice (DeleteNoticeRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/notice"
    };
  }

  rpc AllNewsClassify (google.protobuf.Empty) returns (AllNewsClassifyReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/news/classify",
      additional_bindings {
        get: "/partyaffairs/client/v1/news/classify",
      },
    };
  }

  rpc AddNewsClassify (AddNewsClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/news/classify",
      body: "*"
    };
  }

  rpc UpdateNewsClassify (UpdateNewsClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/news/classify",
      body: "*"
    };
  }

  rpc DeleteNewsClassify (DeleteNewsClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/news/classify"
    };
  }

  rpc PageNewsContent (PageNewsContentRequest) returns (PageNewsContentReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/news/contents",
      additional_bindings {
        get: "/partyaffairs/client/v1/news/contents"
      },
    };
  }

  rpc GetNewsContent (GetNewsContentRequest) returns (NewsContent) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/news/content",
      additional_bindings {
        get: "/partyaffairs/client/v1/news/content",
      },
    };
  }

  rpc AddNewsContent (AddNewsContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/news/content",
      body: "*"
    };
  }

  rpc UpdateNewsContent (UpdateNewsContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/news/content",
      body: "*"
    };
  }

  rpc DeleteNewsContent (DeleteNewsContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/news/content"
    };
  }

  rpc PageNewsComment (PageNewsCommentRequest) returns (PageNewsCommentReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/news/comments",
    };
  }

  rpc DeleteNewsComment (DeleteNewsCommentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/news/comment"
    };
  }

  rpc AddNewsComment (AddNewsCommentRequest) returns (AddNewsCommentReply) {
    option (google.api.http) = {
      post: "/partyaffairs/client/v1/news/comment",
      body: "*"
    };
  }

  rpc DeleteCurNewsComment (DeleteNewsCommentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/client/v1/news/comment"
    };
  }

  rpc AllResourceClassify (google.protobuf.Empty) returns (AllResourceClassifyReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/resource/classify",
      additional_bindings {
        get: "/partyaffairs/client/v1/resource/classify",
      },
    };
  }

  rpc AddResourceClassify (AddResourceClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/resource/classify",
      body: "*"
    };
  }

  rpc UpdateResourceClassify (UpdateResourceClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/resource/classify",
      body: "*"
    };
  }

  rpc DeleteResourceClassify (DeleteResourceClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/resource/classify"
    };
  }

  rpc PageResourceContent (PageResourceContentRequest) returns (PageResourceContentReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/resource/contents",
      additional_bindings {
        get: "/partyaffairs/client/v1/resource/contents",
      },
    };
  }

  rpc GetResourceContent (GetResourceContentRequest) returns (ResourceContent) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/resource/content",
      additional_bindings {
        get: "/partyaffairs/client/v1/resource/content",
      },
    };
  }

  rpc AddResourceContent (AddResourceContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/resource/content",
      body: "*"
    };
  }

  rpc UpdateResourceContent (UpdateResourceContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/resource/content",
      body: "*"
    };
  }

  rpc DeleteResourceContent (DeleteResourceContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/resource/content"
    };
  }

  rpc AllBanner (google.protobuf.Empty) returns (AllBannerReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/banners",
      additional_bindings {
        get: "/partyaffairs/client/v1/banners"
      },
    };
  }

  rpc AddBanner (AddBannerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/banner",
      body: "*"
    };
  }

  rpc UpdateBanner (UpdateBannerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/banner",
      body: "*"
    };
  }

  rpc DeleteBanner (DeleteBannerRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/banner"
    };
  }

  rpc PageTask (PageTaskRequest) returns (PageTaskReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/tasks",
      additional_bindings {
        get: "/partyaffairs/client/v1/tasks"
      },
    };
  }

  rpc GetTask (GetTaskRequest) returns (Task) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/task",
      additional_bindings {
        get: "/partyaffairs/client/v1/task",
      },
    };
  }

  rpc AddTask (AddTaskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/task",
      body: "*"
    };
  }

  rpc UpdateTask (UpdateTaskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/task",
      body: "*"
    };
  }

  rpc DeleteTask (DeleteTaskRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/task"
    };
  }

  rpc PageTaskValue (PageTaskValueRequest) returns (PageTaskValueReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/task/values",
    };
  }

  rpc GetTaskValue (GetTaskValueRequest) returns (TaskValue) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/task/value",
    };
  }

  rpc ExportTaskValue (ExportTaskValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/task/values",
      body: "*"
    };
  }

  rpc GetCurTaskValue (GetCurTaskValueRequest) returns (TaskValue) {
    option (google.api.http) = {
      get: "/partyaffairs/client/v1/task/value",
    };
  }

  rpc AddTaskValue (AddTaskValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/client/v1/task/value",
      body: "*"
    };
  }

  rpc UpdateTaskValue (UpdateTaskValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/client/v1/task/value",
      body: "*"
    };
  }

  rpc DeleteTaskValue (DeleteTaskValueRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/task/value"
    };
  }

  rpc PageVideoClassify (PageVideoClassifyRequest) returns (PageVideoClassifyReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/video/classify",
      additional_bindings {
        get: "/partyaffairs/client/v1/video/classify",
      },
    };
  }

  rpc AddVideoClassify (AddVideoClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/video/classify",
      body: "*"
    };
  }

  rpc UpdateVideoClassify (UpdateVideoClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/video/classify",
      body: "*"
    };
  }

  rpc DeleteVideoClassify (DeleteVideoClassifyRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/video/classify"
    };
  }

  rpc PageVideoContent (PageVideoContentRequest) returns (PageVideoContentReply) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/video/contents",
      additional_bindings {
        get: "/partyaffairs/client/v1/video/contents",
      },
    };
  }

  rpc GetVideoContent (GetVideoContentRequest) returns (VideoContent) {
    option (google.api.http) = {
      get: "/partyaffairs/api/v1/video/content",
      additional_bindings {
        get: "/partyaffairs/client/v1/video/content",
      },
    };
  }

  rpc AddVideoContent (AddVideoContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/api/v1/video/content",
      body: "*"
    };
  }

  rpc UpdateVideoContent (UpdateVideoContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      put: "/partyaffairs/api/v1/video/content",
      body: "*"
    };
  }

  rpc DeleteVideoContent (DeleteVideoContentRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/partyaffairs/api/v1/video/content"
    };
  }

  rpc UpdateUserVideoProcess (UpdateUserVideoProcessRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      post: "/partyaffairs/client/v1/video/process",
      body: "*"
    };
  }
}


